# SpeechToText

./: .gitignore  README.md  pyproject.toml
src/: main.py  main2.py  main3.py  main4.py
